--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         
-        <p class="copyright">anamorfica maintained by <a href="https://github.com/Mrilou">Mrilou</a></p>
+        <p class="copyright">anamorfica maintained by <a href="https://github.com/ariskp">akp</a></p>
         
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
