--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <link rel="stylesheet" type="text/css" media="screen" href="/anamorfica/assets/css/style.css?v=e23f4801fb84a5c8796f9d9cbcc6aea682950883">
+    <link rel="stylesheet" type="text/css" media="screen" href="/pagestest/index.css">
 
 <!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>test | sup</title>
