--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p>And we klfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipej</p>
 <p>From klfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipejklfjjfipej</p>
 <h3>Coming soon!</h3>
-<p><i>Contact me @</i></p>
+<p><em>Contact me @</em></p>
 <p>a@o.com</p>
 
 
